BUG: 286275

Don't create multiple rollback records in case the same object
gets modified more than once during the same transaction. Keeping
the state before the transaction started once is enough.